# wegld-hack-explanation

./: .gitignore  Cargo.toml  README.md  wrapper.wasm
mandos/: hack.scen.json
meta/: Cargo.toml
meta/src/: main.rs
src/: lib.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
