[package]
name = "hacker-wasm"
version = "0.0.0"
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.hacker]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.29.2"

[dependencies.elrond-wasm-output]
version = "0.29.2"
features = ["wasm-output-mode"]

[workspace]
members = ["."]
